# CodeDocSync

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  ANALYZER_TEST_FIXES.md  ARCHITECTURE.MD  CHANGELOG.MD  CHANGELOG.md  CLAUDE.md  COMPONENT_FIXES_LOG.md  CONTEXT.MD  CURRENT_PROMPT.MD  CURRENT_SPRINT.MD  FINAL_TEST_REPORT.md  FIX_CLI_TESTS_GUIDE.md  FUNCTIONAL_ISSUES_FOUND.md  IMPLEMENTATION_STATE.MD  INSTRUCTIONS.MD  TEST_FIXES_LOG.md  TEST_VALIDATION_STATUS.md  VALIDATION_SUMMARY.md  all_suggestion_results.txt  all_tests_count.txt  analyze_test_results.py  analyzer_test_results.txt  black_main_output.txt  black_tests_output.txt  collect_all_mypy_errors.py  current_results.txt  fix_all_import_syntax.py  fix_import_syntax_errors.py  fix_list.md  fix_mangled_imports.py  fix_missing_typing_imports.py  fix_mypy_systematic.py  fix_mypy_tests.py  fix_progress.json  fix_project.py  fix_tracker.py  generator_failures.txt  (+35 more)
.claude/: claude-code-settings.json  settings.local.json
.codedocsync_cache/chroma/: chroma.sqlite3
.github/workflows/: claude.yml  pr-quality-checks.yml
codedocsync/: __init__.py  __main__.py  main.py
codedocsync/analyzer/: __init__.py  config.py  exception_analyzer.py  integration.py  llm_analyzer.py  llm_cache.py  llm_config.py  llm_errors.py  llm_models.py  llm_output_parser.py  llm_performance.py  models.py  prompt_debug.py  prompt_templates.py  rule_engine.py  rule_engine_utils.py
codedocsync/cli/: __init__.py  analyze.py  cache.py  console.py  formatting.py  main.py  match.py  parse.py  placeholders.py  rag.py  suggest.py
codedocsync/matcher/: __init__.py  contextual_facade.py  contextual_matcher.py  contextual_models.py  direct_matcher.py  doc_location_finder.py  embedding_generator.py  facade.py  function_registry.py  import_parser.py  models.py  module_resolver.py  semantic_error_recovery.py  semantic_matcher.py  semantic_models.py  semantic_optimizer.py  semantic_scorer.py  unified_facade.py
codedocsync/parser/: __init__.py  ast_parser.py  (+3 more)
data/: accepted_suggestions.json  bootstrap_corpus.json  curated_examples.json  rag_metrics.json
outputs/: analyzer_summary.txt  analyzer_tests.txt  analyzer_validation.txt  check_suggestion_methods.py  fix_generator_methods.py  generator_methods.txt  matcher_summary.txt  matcher_tests.txt  matcher_validation.txt  param_gen_debug.txt  performance_results.txt  rule_engine_tests.txt  suggestion_methods.txt  suggestions_summary.txt  suggestions_tests.txt  suggestions_validation.txt  validate_analyzer.py  validate_matcher.py  validate_performance.py  validate_suggestions.py
scripts/: bootstrap_rag_corpus.py  find_problematic_test.py  format_file.py  generate_improvement_report.py  identify_failing_tests.py  memory_safe_test_runner.py  safely_remove_suggestion_tests.py  validate_curated_examples.py
test_results/: analyzer_test_results.txt  matcher_test_results.txt  parser_test_results.txt  suggestions_test_results.txt
tests/: .env.test  conftest.py  helpers.py  test_acceptance_simulation.py  test_ast_parser.py  test_chromadb_graceful_degradation.py  test_cli.py  test_contextual_integration.py  test_contextual_matcher.py  test_contextual_models.py  test_cross_file_matching.py  test_direct_matcher_exact.py  test_direct_matcher_fuzzy.py  test_docstring_parser.py  test_embedding_cache.py  test_embedding_config.py  test_embedding_generator.py  test_function_registry.py  test_import_parser.py  test_integrated_parser.py  test_integration.py  test_matcher_integration.py  test_matcher_models.py  test_matcher_performance.py  test_module_resolver.py  test_rag_phase5.py  test_semantic_error_recovery.py  test_semantic_integration.py  test_semantic_matcher.py  test_semantic_models.py  test_semantic_optimizer.py  test_semantic_performance.py  test_semantic_scorer.py  test_simulation_statistics.py  test_unified_matching.py  test_unified_performance.py  test_vector_store.py
(+125 files in other folders)
