[project]
name = "codedocsync"
version = "0.1.0"
description = "An intelligent tool to detect inconsistencies between Python code and documentation"
authors = [
    {name = "Issa-Kakar",email = "issakakar001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "docstring_parser (>=0.16,<1.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "chromadb (>=0.4.0,<1.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "sentence-transformers (>=2.2.0,<3.0.0)",
    "tenacity (>=8.0.0,<9.0.0)",
    "psutil (>=5.9.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.0"
black = "^25.1.0"
mypy = "^1.17.0"
ruff = "^0.12.3"
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
